--- a/index.html
+++ b/index.html
@@ -27,20 +27,47 @@
 <div class="parent example2">
 <div class="mainbox">
 <p>
-    hgfhgfhfdghtyrjytrjytrjtyhgfdjhtdjfgjyftdgjytjdrtygjtyjytrjuykfghwweituy389475t438ut384957ituiydufhysdui ftysduighyweuryweuhyftweuiytrweuity43834uhui2hgfhgfhfdghtyrjytrjytrjtyhgfdjhtdjfgjyftdgjytjdrtygjtyjytrjuykfghwweituy389475t438ut384957ituiydufhysdui ftysduighyweuryweuhyftweuiytrweuity43834uhui2hgfhgfhfdghtyrjytrjytrjtyhgfdjhtdjfgjyftdgjytjdrtygjtyjytrjuykfghwweituy389475t438ut384957ituiydufhysdui
+    hgfhgfhfdg htyrjytrjytrj tyhgfdjh tdjfgjyft dgjytjdrtygjtyjy trjuykfghwweituy389475t43 8ut384957ituiydufhysdui ftysduighyweuryweuhyftweuiytrweuit y43834uhui2hgfhgfhfdghtyrjytrjytrjtyhgfdjhtdjfgjyftdgjytjdrtygjtyjytrjuykfghwweituy389475t438u t384957ituiydufhysdui
 </p>
 </div>
 <div class="aside1">
 <p>
-    hgfhgfhfdghtyrjytrjytrjtyhgfdjhtdjfgjyftdgjytjdrtygjtyjytrjuykfghwweituy389475t438ut384957ituiydufhysdui ftysduighyweuryweuhyftweuiytrweuity43834uhui2hgfhgfhfdghtyrjytrjytrjtyhgfdjhtdjfgjyftdgjytjdrtygjtyjytrjuykfghwweituy389475t438ut384957ituiydufhysdui ftysduighyweuryweuhyftweuiytrweuity43834uhui2hgfhgfhfdghtyrjytrjytrjtyhgfdjhtdjfgjyftdgjytjdrtygjtyjytrjuykfghwweituy389475t438ut384957ituiydufhysdui
+    hgfhgf hfdghtyr jytrjytrjtyhgfd jhtdjfgjyf tdgjytjdrtygjty jytrjuykfghwweituy389475t438ut38495 7ituiydufhysdui ftysduighyweuryweuhyftweuiytrweuit y43834uhui2hgfhgfhfdghtyrjytrjytrjtyhgfdjhtdjfgjyftdgjytjdrtygjtyjytrjuykfghwweituy389475t 438ut384957ituiydufhysdui
 </p>
 </div>
 <div class="aside2">
 <p>
-    hgfhgfhfdghtyrjytrjytrjtyhgfdjhtdjfgjyftdgjytjdrtygjtyjytrjuykfghwweituy389475t438ut384957ituiydufhysdui ftysduighyweuryweuhyftweuiytrweuity43834uhui2hgfhgfhfdghtyrjytrjytrjtyhgfdjhtdjfgjyftdgjytjdrtygjtyjytrjuykfghwweituy389475t438ut384957ituiydufhysdui ftysduighyweuryweuhyftweuiytrweuity43834uhui2hgfhgfhfdghtyrjytrjytrjtyhgfdjhtdjfgjyftdgjytjdrtygjtyjytrjuykfghwweituy389475t438ut384957ituiydufhysdui
+    hgfhgfhfdghty rjytrjytrjtyhg fdjhtdjfgjyftdgjytjd rtygjtyjytrjuykfghwweituy389475t438u t384957ituiydufhysdui ftysduighyweuryweuhyftweuiytrweui ty43834uhui2hgfhgfhfdghtyrjytrjytrjtyhgfdjhtdjfgjyftdgjytjdrtygjtyjytrjuykfghwweituy389475t4 38ut384957ituiydufhysdui
 </p>
 </div>
 </div>
+
+<h4>Example 3: Nested flexbox: Understanding parent, child, and grandchild elements</h4>
+
+<div class="parent example3">
+
+    <div class="child red">
+        <p>I'm a child</p>
+    </div>
+
+    <div class="child yellow">
+        <div class="child grandchild purple">
+            <p>I'm a child but aslo a grandchild</p>
+        </div>
+
+        <div class="child grandchild orange">
+            <p>I'm a child but also a grandchild</p>
+        </div>
+
+    </div>
+
+</div>
+
+<div
+
+
+
+
 
 </body>
 </html>
