--- a/index.html
+++ b/index.html
@@ -63,11 +63,32 @@
 
 </div>
 
-<div
+<h4>Example 4: </h4>
+
+<div class="parent example4">
+
+<div class="child">
+
+</div>
+
+<div class="child">
+
+</div>
+
+<div class="child">
+
+</div>
+
+<div class="child">
+
+</div>
 
 
 
 
+
+
+</div>
 
 </body>
 </html>
